[fixes #16725039] user can only input numbers or periods in percentage fields on classifications screen, fix classification heading overlap

--- a/app/stylesheets/partials/_coding_page.sass
+++ b/app/stylesheets/partials/_coding_page.sass
@@ -32,7 +32,6 @@ body #content #main .activity_tree a
   float: right
   font-size: 11px
   position: relative
-  top: 15px
   width: 335px
   span
     &.budget
